hw06/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment-auth
  labels:
    app: hw-app-k8s-a

spec:
  replicas: 1
  selector:
    matchLabels:
      env: hw-auth
  template:
    metadata:
      labels:
        env: hw-auth
    spec:
      containers:
      - name: hw06-auth
        image: pisklovcor/hw-06-auth-docker:dockerfile
        ports:
          - containerPort: 8001
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment-service
  labels:
    app: hw-app-k8s-s

spec:
  replicas: 1
  selector:
    matchLabels:
      env: hw-service
  template:
    metadata:
      labels:
        env: hw-service
    spec:
      containers:
        - name: hw06-service
          image: pisklovcor/hw-06-service-docker:dockerfile
          ports:
            - containerPort: 8002
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: hw-postgres

spec:
  replicas: 1
  selector:
    matchLabels:
      env: postgres-app
  template:
    metadata:
      labels:
        env: postgres-app
    spec:
      containers:
        - name  : postgres-13
          image : postgres:13.3
          ports :
            - containerPort: 5432
