hw06/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-service-auth

spec:
  selector:
    env: hw-auth
  ports:
    - protocol  : TCP
      port      : 80
      targetPort: 8001
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: hw-service-service

spec:
  selector:
    env: hw-service
  ports:
    - protocol  : TCP
      port      : 80
      targetPort: 8002
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-svc

spec:
  selector:
    env: postgres-app
  ports:
    - port      : 5432
      targetPort: 5432
