hw06/manifest/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-ingress-auth

spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
        - path: /register
          pathType: ImplementationSpecific
          backend:
            service:
              name: hw-service-auth
              port:
                number: 80
        - path: /login
          pathType: ImplementationSpecific
          backend:
            service:
              name: hw-service-auth
              port:
                number: 80
        - path: /signin
          pathType: ImplementationSpecific
          backend:
            service:
              name: hw-service-auth
              port:
                number: 80
        - path: /logout
          pathType: ImplementationSpecific
          backend:
            service:
              name: hw-service-auth
              port:
                number: 80
        - path: /auth
          pathType: ImplementationSpecific
          backend:
            service:
              name: hw-service-auth
              port:
                number: 80
